--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.30.0
-streamlit-folium
+streamlit-folium==0.12.0
 folium==0.14.0
 geopy==2.4.0
 pandas==1.5.3
 python-dotenv==1.0.0
-openai==1.0.0
+requests==2.31.0
+
