--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit==1.30.0
 streamlit-folium==0.12.0
 folium==0.14.0
-geopy==2.4.0
+numpy==1.26.4
 pandas==1.5.3
-python-dotenv==1.0.0
+geopy==2.4.0
 requests==2.31.0
+python-dotenv==1.0.0
+
 
